fix: opening section jumping on scroll

--- a/src/components/_opening.scss
+++ b/src/components/_opening.scss
@@ -6,7 +6,7 @@
 .opening {
   display: grid;
   align-items: start;
-  min-height: 85dvh;
+  min-height: 85vh;
   padding-block: 50px 80px;
 
   .opening_container {
